mock-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-microservice
  labels:
    app: mock-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-microservice
  template:
    metadata:
      labels:
        app: mock-microservice
    spec:
      containers:
      - name: mock-microservice
        image: abhi/mock-microservice:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8052
