demo-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-microservice
  labels:
    app: demo-microservice
spec:
  ports:
  - port: 8051
    targetPort: 8051
    protocol: TCP
  selector:
    app: demo-microservice
