mock-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-microservice
  labels:
    app: mock-microservice
spec:
  ports:
  - port: 8052
    targetPort: 8052
    protocol: TCP
  selector:
    app: mock-microservice
